--- a/data/config.json
+++ b/data/config.json
@@ -1,51 +1,109 @@
 {
-	"info": {
-		"video_url": "",
-		"title": "Caça Niquel",
-		"subtitle": "Teste sua sorte"
-	},
-	"inputs": [
-		{
-			"name": "name",
-			"label": "Nome",
-			"type": "text",
-			"placeholder": "Seu primeiro nome",
-			"defaultValue": "",
-			"rules": {
-				"required": "Campo obrigatório"
-			}
+	"game": {
+		"info": {
+			"video_url": "",
+			"title": "Caça Niquel",
+			"subtitle": "Teste sua sorte"
 		},
-		{
-			"name": "email",
-			"label": "E-mail",
-			"type": "email",
-			"placeholder": "@.com",
-			"defaultValue": "",
-			"rules": {
-				"required": "Campo obrigatório"
-			}
-		},
+		"inputs": [
+			{
+				"name": "name",
+				"label": "Nome",
+				"type": "text",
+				"placeholder": "Seu primeiro nome",
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
+			},
+			{
+				"name": "email",
+				"label": "E-mail",
+				"type": "email",
+				"placeholder": "@.com",
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
+			},
 
-		{
-			"name": "phone",
-			"label": "Celular",
-			"type": "text",
-			"placeholder": "Enter your last name",
-			"defaultValue": "",
-			"rules": {
-				"required": "Campo obrigatório"
+			{
+				"name": "phone",
+				"label": "Celular",
+				"type": "text",
+				"placeholder": "Seu celular",
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
+			},
+			{
+				"name": "gender",
+				"label": "Gênero",
+				"type": "radio",
+				"options": ["Masculino", "Feminino"],
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
+			},
+			{
+				"name": "agree",
+				"label": "Aceitar termos e condiçoes.",
+				"type": "checkbox",
+				"defaultValue": false
 			}
+		]
+	},
+	"video": {
+		"info": {
+			"video_url": "https://www.youtube.com/embed/IExB4lvWOV0",
+			"title": "Desconto Promocional",
+			"subtitle": "Teste sua sorte"
 		},
-		{
-			"name": "gender",
-			"label": "Gênero",
-			"type": "radio",
-			"placeholder": "Enter your last name",
-			"options": ["Masculino", "Feminino"],
-			"defaultValue": "",
-			"rules": {
-				"required": "Campo obrigatório"
+		"inputs": [
+			{
+				"name": "name",
+				"label": "Nome",
+				"type": "text",
+				"placeholder": "Seu primeiro nome",
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
+			},
+			{
+				"name": "email",
+				"label": "E-mail",
+				"type": "email",
+				"placeholder": "@.com",
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
+			},
+
+			{
+				"name": "phone",
+				"label": "Celular",
+				"type": "text",
+				"placeholder": "Enter your last name",
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
+			},
+			{
+				"name": "gender",
+				"label": "Gênero",
+				"type": "radio",
+				"placeholder": "Enter your last name",
+				"options": ["Masculino", "Feminino"],
+				"defaultValue": "",
+				"rules": {
+					"required": "Campo obrigatório"
+				}
 			}
-		}
-	]
+		]
+	}
 }
